alignment fix

--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
+  text-align: center;
 }
 
 *, *::before, *::after {
@@ -22,7 +23,9 @@ body {
 
 .list {
 	list-style-type: none;
-	display: inline-block;
+	padding: 0;
+	position: absolute;
+	width: 100%;
 }
 
 .list a {
@@ -44,6 +47,7 @@ a:hover {
 
 img {
 	display: none;
+	margin: 0 auto;
 }
 
 .img:target {
